--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.servlet.encoding.force-response: true
+
+#h2 DB, ? ?? ?? ??
+#localhost:8080/h2-console
+#????? ?? jdbc:h2 ???? h2-console? jdbc url? ????
+spring.h2.console.enabled=true
