--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ server.servlet.encoding.force-response: true
 #localhost:8080/h2-console
 #????? ?? jdbc:h2 ???? h2-console? jdbc url? ????
 spring.h2.console.enabled=true
+
+# 15?: data.sql ??? ?? ??(????? 2.5 ?? ??)
+spring.jpa.defer-datasource-initialization=true
