--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ server.servlet.encoding.force-response: true
 #????? ?? jdbc:h2 ???? h2-console? jdbc url? ????
 spring.h2.console.enabled=true
 
-# 15?: data.sql ??? ?? ??(????? 2.5 ?? ??)
+# 15?: data.sql ??? ?? ??(????? 2.5 ??)
 spring.jpa.defer-datasource-initialization=true
