--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.servlet.encoding.force-response: true
 
-#h2 DB, ? ?? ?? ??
+# 09강: h2 DB, 웹 콘솔 설정
 #localhost:8080/h2-console
 #????? ?? jdbc:h2 ???? h2-console? jdbc url? ????
 spring.h2.console.enabled=true
 
-# 15?: data.sql ??? ?? ??(????? 2.5 ??)
+# 15강: data.sql 적용을 위한 설정(스프링부트 2.5 이상)
 spring.jpa.defer-datasource-initialization=true
