--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,17 @@ server.servlet.encoding.force-response: true
 
 # 09강: h2 DB, 웹 콘솔 설정
 #localhost:8080/h2-console
-#????? ?? jdbc:h2 ???? h2-console? jdbc url? ????
 spring.h2.console.enabled=true
 
 # 15강: data.sql 적용을 위한 설정(스프링부트 2.5 이상)
 spring.jpa.defer-datasource-initialization=true
+
+# 17강: JPA 로깅 설정
+## 디버그 레벨로 쿼리 출력
+logging.level.org.hibernate.SQL=DEBUG
+## 이쁘게 보여주기
+spring.jpa.properties.hibernate.format_sql=true
+## 파라미터 보여주기
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+## 고정 url 설정
+spring.datasource.url=jdbc:h2:mem:testdb
