--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,13 @@ spring.jpa.properties.hibernate.format_sql=true
 ## 파라미터 보여주기
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 ## 고정 url 설정
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+# 28강: PostgreSQL 연동
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.datasource.data=classpath:/data.sql
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
