DB 데이터 유지하기 - initialization-mode, ddl-auto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.datasource.data=classpath:/data.sql
-spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.data-locations=classpath:/data.sql
+spring.datasource.initialization-mode=never
+spring.jpa.hibernate.ddl-auto=update
