--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,18 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     // 28강: PostgreSQL 드라이버 추가!
     runtimeOnly 'org.postgresql:postgresql'
+    // MySQL 커넥터 의존성 추가
+    implementation 'mysql:mysql-connector-java:8.0.29'
+    // JWT API 의존성 추가
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    // JWT 구현체 의존성 추가
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    // JWT Jackson 구현체 의존성 추가
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    // SpringDoc OpenAPI WebMVC UI 스타터 의존성 추가
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
 }
 
 tasks.named('test') {
