postgres user 테이블 생성

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,12 +16,12 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 ## 고정 url 설정
 ## 30강
-spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.url=jdbc:h2:mem:testdb
 # 28강: PostgreSQL 연동
-#spring.datasource.url=jdbc:postgresql://localhost:5432/firstproject_db
-#spring.datasource.username=postgres
-#spring.datasource.password=postgres
-spring.datasource.data=classpath:/data.sql
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.datasource.data=classpath:/data.sql
 ## 30강
-spring.datasource.initialization-mode=always
+#spring.datasource.initialization-mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
