db 테이블 데이터 유지

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.datasource.password=postgres
 #spring.datasource.data=classpath:/data.sql
 ## 30강
 #spring.datasource.initialization-mode=always
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
