--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // 공백 체크 및 각종 체크를 도와주는 어노테이션을 사용할 수 있게 해주는 Dependency
 }
 
 tasks.named('test') {
